Add flag isLatest